--- a/index.html
+++ b/index.html
@@ -1,27 +1,108 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="utf8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <title>DynaiStore - E-commerce frontend template</title>
-        <meta name="description" content="…" />
+<head>
+    <meta charset="utf8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="stylesheet" href="css/styles.min.css" />
-    </head>
+    <title>DynaiStore - E-commerce frontend template</title>
+    <meta name="description" content="…" />
 
-    <body>
-        <header class="app-header">
-            <h1>DynaiStore</h1>
-            <p class="app-slogan">E-commerce frontend template</p>
-        </header>
+    <script src="https://kit.fontawesome.com/b916232238.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/styles.min.css" />
+</head>
 
-        <main class="app-main">
+<body>
+    <header class="app-header">
+        <div class="app-brand">
+            <a href="./" class="app-logo" title="Retour à l'accueil">
+                <img src="img/logo-dynaistore.png" alt="Logo DynaiStore" />
+            </a>
+            <div class="app-name">
+                <a href="./" class="app-logo" title="Retour à l'accueil">
+                    <h1><span>Dyn</span><span>ai</span>Store</h1>
+                    <p class="app-slogan"><span>E-commerce</span> <span>frontend</span> template</p>
+                </a>
+            </div>
+        </div>
 
-        </main>
+        <nav class="app-mainmenu">
+            <ul class="app-menu">
+                <li>
+                    <a href="#" title=""><i class="far fa-user"></i></a>
+                </li>
+                <li>
+                    <a href="#" title=""><i class="fas fa-power-off"></i></a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-        <footer class="app-footer">
-            <p class="app-copyrights">© Dynaidev</p>
-        </footer>
-    </body>
+    <main class="app-main">
+        <p>Main start</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>…</p>
+        <p>Main end</p>
+    </main>
+
+    <footer class="app-footer">
+        <p class="app-copyrights">© Dynaidev</p>
+    </footer>
+</body>
+
 </html>
