Homepage : Promotions section

--- a/index.html
+++ b/index.html
@@ -39,65 +39,76 @@
     </header>
 
     <main class="app-main">
-        <p>Main start</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>…</p>
-        <p>Main end</p>
+        <section class="promotions">
+            <header>
+                <h2>Les promotions <span>du jour</span></h2>
+            </header>
+
+            <div class="app-grid grid-three">
+                <div class="grid-item">
+                    <a href="#" title="Fiche produit">
+                        <figure class="grid-item-image">
+                            <img src="img/catalog/shoes/shoes01.jpg" alt="Chaussures de ville Homme" />
+                        </figure>
+                        <div class="grid-item-content">
+                            <h3 class="grid-item-title">Chaussures de ville Homme</h3>
+                            <p class="grid-item-description">Pour porter des costumes classes</p>
+                            <p class="grid-item-price">79<span>99</span></p>
+                        </div>
+                    </a>
+                    <div class="grid-item-actions">
+                        <a href="#" class="grid-item-action" title="Fiche produit">
+                            <i class="fas fa-eye"></i>
+                        </a>
+                        <a href="#" class="grid-item-action addtocart" title="Ajouter au painer">
+                            <i class="fas fa-cart-plus"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="grid-item">
+                    <a href="#" title="Fiche produit">
+                        <figure class="grid-item-image">
+                            <img src="img/catalog/shoes/shoes02.jpg" alt="Chaussures détente" />
+                        </figure>
+                        <div class="grid-item-content">
+                            <h3 class="grid-item-title">Chaussures détente</h3>
+                            <p class="grid-item-description">Pour se promener les pieds au cool</p>
+                            <p class="grid-item-price">39<span>99</span></p>
+                        </div>
+                    </a>
+                    <div class="grid-item-actions">
+                        <a href="#" class="grid-item-action" title="Fiche produit">
+                            <i class="fas fa-eye"></i>
+                        </a>
+                        <a href="#" class="grid-item-action addtocart" title="Ajouter au painer">
+                            <i class="fas fa-cart-plus"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="grid-item">
+                    <a href="#" title="Fiche produit">
+                        <figure class="grid-item-image">
+                            <img src="img/catalog/shoes/shoes03.jpg" alt="Chaussures de ville Homme" />
+                        </figure>
+                        <div class="grid-item-content">
+                            <h3 class="grid-item-title">Chaussures de ville Homme</h3>
+                            <p class="grid-item-description">Pour porter des jeans classes</p>
+                            <p class="grid-item-price">179</p>
+                        </div>
+                    </a>
+                    <div class="grid-item-actions">
+                        <a href="#" class="grid-item-action" title="Fiche produit">
+                            <i class="fas fa-eye"></i>
+                        </a>
+                        <a href="#" class="grid-item-action addtocart" title="Ajouter au painer">
+                            <i class="fas fa-cart-plus"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer class="app-footer">
