--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
     <!-- Application main -->
     <main class="app-main">
+
         <!-- Homepage section Diaporama -->
         <section class="forward">
             <a href="#" class="app-slider-previous" title="Précédent">
@@ -72,31 +73,28 @@
             <div class="app-slider" id="sliderForward">
                 <div class="app-slide">
                     <figure class="slide-image">
-                        <img src="img/catalog/shoes/shoes01.jpg" alt="Chaussures de ville Homme" />
+                        <img src="https://placehold.it/1024x768" alt="Nom du produit" />
                     </figure>
                     <div class="slide-content">
-                        <h3 class="slide-title">Chaussures de ville Homme</h3>
-                        <p class="slide-price">79<span>99</span></p>
+                        <h3 class="slide-title">Nom du produit</h3>
                     </div>
                 </div>
 
                 <div class="app-slide">
                     <figure class="slide-image">
-                        <img src="img/catalog/shoes/shoes02.jpg" alt="Chaussures détente" />
+                        <img src="https://placehold.it/1024x768" alt="Nom du produit" />
                     </figure>
                     <div class="slide-content">
-                        <h3 class="slide-title">Chaussures détente</h3>
-                        <p class="slide-price">39<span>99</span></p>
+                        <h3 class="slide-title">Nom du produit</h3>
                     </div>
                 </div>
 
                 <div class="app-slide">
                     <figure class="slide-image">
-                        <img src="img/catalog/shoes/shoes03.jpg" alt="Chaussures de ville Homme" />
+                        <img src="https://placehold.it/1024x768" alt="Nom du produit" />
                     </figure>
                     <div class="slide-content">
-                        <h3 class="slide-title">Chaussures de ville Homme</h3>
-                        <p class="slide-price">179</p>
+                        <h3 class="slide-title">Nom du produit</h3>
                     </div>
                 </div>
             </div>
@@ -105,19 +103,19 @@
         <!-- Homepage section Promotions -->
         <section class="promotions">
             <header>
-                <h2>Les promotions <span>du jour</span></h2>
+                <h2>Un titre <span>de section</span></h2>
             </header>
 
             <div class="app-grid grid-three">
                 <div class="grid-item">
                     <a href="#" title="Fiche produit">
                         <figure class="grid-item-image">
-                            <img src="img/catalog/shoes/shoes01.jpg" alt="Chaussures de ville Homme" />
+                            <img src="https://placehold.it/1024x768" alt="Nom du produit" />
                         </figure>
                         <div class="grid-item-content">
-                            <h3 class="grid-item-title">Chaussures de ville Homme</h3>
-                            <p class="grid-item-description">Pour porter des costumes classes</p>
-                            <p class="grid-item-price">79<span>99</span></p>
+                            <h3 class="grid-item-title">Nom du produit</h3>
+                            <p class="grid-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia dapibus libero vitae hendrerit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae…</p>
+                            <p class="grid-item-price">99<span>99</span></p>
                         </div>
                     </a>
                     <div class="grid-item-actions">
@@ -133,12 +131,12 @@
                 <div class="grid-item">
                     <a href="#" title="Fiche produit">
                         <figure class="grid-item-image">
-                            <img src="img/catalog/shoes/shoes02.jpg" alt="Chaussures détente" />
+                            <img src="https://placehold.it/1024x768" alt="Nom du produit" />
                         </figure>
                         <div class="grid-item-content">
-                            <h3 class="grid-item-title">Chaussures détente</h3>
-                            <p class="grid-item-description">Pour se promener les pieds au cool</p>
-                            <p class="grid-item-price">39<span>99</span></p>
+                            <h3 class="grid-item-title">Nom du produit</h3>
+                            <p class="grid-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia dapibus libero vitae hendrerit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae…</p>
+                            <p class="grid-item-price">999<span>99</span></p>
                         </div>
                     </a>
                     <div class="grid-item-actions">
@@ -154,12 +152,12 @@
                 <div class="grid-item">
                     <a href="#" title="Fiche produit">
                         <figure class="grid-item-image">
-                            <img src="img/catalog/shoes/shoes03.jpg" alt="Chaussures de ville Homme" />
+                            <img src="https://placehold.it/1024x768" alt="Nom du produit" />
                         </figure>
                         <div class="grid-item-content">
-                            <h3 class="grid-item-title">Chaussures de ville Homme</h3>
-                            <p class="grid-item-description">Pour porter des jeans classes</p>
-                            <p class="grid-item-price">179</p>
+                            <h3 class="grid-item-title">Nom du produit</h3>
+                            <p class="grid-item-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse lacinia dapibus libero vitae hendrerit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae…</p>
+                            <p class="grid-item-price">9 999<span>99</span></p>
                         </div>
                     </a>
                     <div class="grid-item-actions">
