Homepage : CTA section

--- a/index.html
+++ b/index.html
@@ -100,6 +100,19 @@
             </div>
         </section>
 
+        <!-- Homepage section Inscriptions -->
+        <section class="cta">
+            <figure class="cta-image">
+                <img src="img/cta-bg.jpg" alt="Titre CTA" />
+            </figure>
+            <h4 class="cta-title">Une bonne petite phrase d'accroche qui donne envie</h4>
+            <p class="cta-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <a href="#" class="app-btn cta">
+                Je crée mon compte client
+                <small>Et je bénéficie de la promo !</small>
+            </a>
+        </section>
+
         <!-- Homepage section Promotions -->
         <section class="promotions">
             <header>
