--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
                         <img src="https://placehold.it/1024x768" alt="Nom du produit" />
                     </figure>
                     <div class="slide-content">
-                        <h3 class="slide-title">Nom du produit</h3>
+                        <h3 class="slide-title">Annonce #1</h3>
+                        <p class="slide-description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        </p>
+                        <a class="app-btn cta slide-btn">J'en profite !</a>
                     </div>
                 </div>
 
@@ -85,7 +89,9 @@
                         <img src="https://placehold.it/1024x768" alt="Nom du produit" />
                     </figure>
                     <div class="slide-content">
-                        <h3 class="slide-title">Nom du produit</h3>
+                        <h3 class="slide-title">Annonce #2</h3>
+                        <p class="slide-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        <a class="app-btn cta slide-btn">Je découvre !</a>
                     </div>
                 </div>
 
@@ -94,7 +100,9 @@
                         <img src="https://placehold.it/1024x768" alt="Nom du produit" />
                     </figure>
                     <div class="slide-content">
-                        <h3 class="slide-title">Nom du produit</h3>
+                        <h3 class="slide-title">Annonce #3</h3>
+                        <p class="slide-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                        <a class="app-btn cta slide-btn">J'y vais !</a>
                     </div>
                 </div>
             </div>
@@ -105,7 +113,7 @@
             <figure class="cta-image">
                 <img src="img/cta-bg.jpg" alt="Titre CTA" />
             </figure>
-            <h4 class="cta-title">Une bonne petite phrase d'accroche qui donne envie</h4>
+            <h4 class="cta-title">Une bonne petite phrase d'accroche qui donne envie de cliquer</h4>
             <p class="cta-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <a href="#" class="app-btn cta">
                 Je crée mon compte client
