Register & Login pages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </a>
             <div class="app-name">
                 <a href="./" class="app-logo" title="Retour à l'accueil">
-                    <h1><span>Dyn</span><span>ai</span>Store</h1>
+                    <h1 class="app-title"><span>Dyn</span><span>ai</span>Store</h1>
                     <p class="app-slogan"><span>E-commerce</span> <span>frontend</span> template</p>
                 </a>
             </div>
@@ -37,7 +37,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" title="">
+                    <a href="inscription.html" title="">
                         <i class="far fa-user"></i>
                         Client
                     </a>
@@ -80,7 +80,7 @@
                         <p class="slide-description">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit
                         </p>
-                        <a class="app-btn cta slide-btn">J'en profite !</a>
+                        <a href="#" class="app-btn cta slide-btn">J'en profite !</a>
                     </div>
                 </div>
 
@@ -91,7 +91,7 @@
                     <div class="slide-content">
                         <h3 class="slide-title">Annonce #2</h3>
                         <p class="slide-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                        <a class="app-btn cta slide-btn">Je découvre !</a>
+                        <a href="#" class="app-btn cta slide-btn">Je découvre !</a>
                     </div>
                 </div>
 
@@ -102,7 +102,7 @@
                     <div class="slide-content">
                         <h3 class="slide-title">Annonce #3</h3>
                         <p class="slide-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                        <a class="app-btn cta slide-btn">J'y vais !</a>
+                        <a href="#" class="app-btn cta slide-btn">J'y vais !</a>
                     </div>
                 </div>
             </div>
@@ -115,7 +115,7 @@
             </figure>
             <h4 class="cta-title">Une bonne petite phrase d'accroche qui donne envie de cliquer</h4>
             <p class="cta-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <a href="#" class="app-btn cta">
+            <a href="inscription.html#inscription" class="app-btn cta">
                 Je crée mon compte client
                 <small>Et je bénéficie de la promo !</small>
             </a>
