--- a/index.html
+++ b/index.html
@@ -31,27 +31,33 @@
         <nav class="app-mainmenu">
             <ul class="app-menu">
                 <li>
-                    <a href="#" title="">
+                    <a href="#" title="Boutique">
                         <i class="fas fa-store"></i>
                         Boutique
                     </a>
                 </li>
                 <li>
-                    <a href="inscription.html" title="">
+                    <a href="inscription.html" title="Client">
                         <i class="far fa-user"></i>
                         Client
                     </a>
                 </li>
                 <li style="display: none;">
-                    <a href="#" title="">
+                    <a href="#" title="Déconnexion">
                         <i class="fas fa-power-off"></i>
                         Déconnexion
                     </a>
                 </li>
                 <li>
-                    <a href="#" title="">
+                    <a href="#" title="Panier">
                         <i class="fas fa-shopping-cart"></i>
                         Panier
+                    </a>
+                </li>
+                <li>
+                    <a href="#" title="Autres">
+                        <i class="fas fa-bars"></i>
+                        AUtres
                     </a>
                 </li>
             </ul>
