--- a/index.html
+++ b/index.html
@@ -54,11 +54,19 @@
                         Panier
                     </a>
                 </li>
-                <li>
+                <li class="dropdown">
                     <a href="#" title="Autres">
                         <i class="fas fa-bars"></i>
                         AUtres
                     </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#" title="Contact">
+                                <i class="fas fa-envelope"></i>
+                                Contactez-nous
+                            </a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </nav>
