--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     </a>
                 </li>
                 <li class="dropdown">
-                    <a href="#" title="Autres">
+                    <a title="Autres">
                         <i class="fas fa-bars"></i>
                         AUtres
                     </a>
