--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <li class="dropdown">
                     <a title="Autres">
                         <i class="fas fa-bars"></i>
-                        AUtres
+                        Autres
                     </a>
                     <ul class="dropdown-menu">
                         <li>
