--- a/inscription.html
+++ b/inscription.html
@@ -54,11 +54,19 @@
                         Panier
                     </a>
                 </li>
-                <li>
-                    <a href="#" title="Autres">
+                <li class="dropdown">
+                    <a title="Autres">
                         <i class="fas fa-bars"></i>
-                        AUtres
+                        Autres
                     </a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="#" title="Contact">
+                                <i class="fas fa-envelope"></i>
+                                Contactez-nous
+                            </a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </nav>
