--- a/inscription.html
+++ b/inscription.html
@@ -113,7 +113,7 @@
                         </div>
                         <div class="grid-item-content">
                             <h3 class="grid-item-title">Tranquille</h3>
-                            <p class="grid-item-description">Depuis votre canapé</p>
+                            <p class="grid-item-description">Depuis votre canapé ou dans le bus</p>
                         </div>
                     </div>
 
@@ -123,7 +123,7 @@
                         </div>
                         <div class="grid-item-content">
                             <h3 class="grid-item-title">En sécurité</h3>
-                            <p class="grid-item-description">Paiement sécurisé par CB</p>
+                            <p class="grid-item-description">Paiement sécurisé par CB ou Paypal</p>
                         </div>
                     </div>
 
